# cv-analyzer-backend

./: .env.example  .gitignore  README.md  backend.log.1  pyproject.toml  run.py  seed_database.py
src/cv_analyzer/: __init__.py  routes.py  services.py
